# Spycular

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  how-to-guides.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  tutorials.html
.github/workflows/: ci-doc-publish.yml  ci-lint.yml  ci-tests.yml
docs/: index.md
docs/home/: getting_started.md
docs/modules/consumer/: abstract_consumer.md  virtual_consumer.md
docs/modules/pointer/: callable_pointer.md  obj_pointer.md
docs/modules/producer/: abstract_producer.md  virtual_producer.md
docs/modules/reflection/: incident.md  reflected.md
docs/modules/store/: abstract_store.md  virtual_store.md
home/: getting_started.html
modules/consumer/: abstract_consumer.html  virtual_consumer.html
modules/pointer/: callable_pointer.html  class_pointer.html  obj_pointer.html
modules/producer/: abstract_producer.html  virtual_producer.html
modules/reflection/: incident.html  reflected.html
modules/store/: abstract_store.html  virtual_store.html
pynocchio/: Untitled.ipynb  old_pointer.py  utils.py
pynocchio/consumer/: abstract.py  virtual_consumer.py
pynocchio/pointer/: abstract.py  callable_pointer.py  class_pointer.py  object_pointer.py
pynocchio/pointer/graph/: abstract.py  async_graph.py
pynocchio/producer/: abstract.py  virtual_producer.py
pynocchio/puppetry/: puppet.py  puppeteer.py
pynocchio/reflection/: incident.py  reflected.py
pynocchio/serde/: __init__.py
pynocchio/serde/capnp/: __init__.py  recursive.py  recursive_primitives.py
pynocchio/serde/capnp/numpy/: __init__.py  serde.py
pynocchio/serde/capnp/primitives/: __init__.py  serde.py
pynocchio/serde/capnp/torch/: __init__.py  serde.py
pynocchio/store/: abstract.py  virtual_store.py
scripts/: test_server.py
spycular/: __init__.py
spycular/consumer/: abstract.py  virtual.py  virtual_consumer.py  websocket.py
spycular/pointer/: abstract.py  callable_pointer.py  class_pointer.py  object_pointer.py
spycular/pointer/graph/: abstract.py  async_graph.py
spycular/producer/: abstract.py  virtual_producer.py  websocket.py
spycular/puppetry/: puppet.py  puppeteer.py
spycular/reflection/: incident.py  reflected.py
spycular/serde/capnp/: __init__.py  recursive.py
spycular/store/: abstract.py  virtual_store.py
spycular/utils/: uuid_gen.c
test/: conftest.py
test/classes/: conftest.py  module_mock.py  test_class_reflection.py
test/numpy/: test_numpy.py
test/serde/capnp/: test_numpy_serde.py  test_primitives.py  test_torch_serde.py
test/serde/test_capnp/: conftest.py  fixture.py  test_numpy_serde.py  test_pointer.py  test_primitives.py  test_torch_serde.py
test/store/: test_virtual_store.py
test/test_numpy/: conftest.py  fixture.py  test_numpy.py
test/test_torch/: conftest.py  fixture.py  test_torch.py
test/ws_integration/: conftest.py
test/ws_integration/numpy_integration/: conftest.py  test_integration_numpy.py
test/ws_integration/torch_integration/: conftest.py  test_integration_torch.py
