[tool.poetry]
name = "pynocchio"
version = "0.1.0"
description = ""
authors = ["Ionesio Junior <ionesiojr@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://example.com/pynocchio"
repository = "https://github.com/username/pynocchio"
documentation = "https://example.com/pynocchio/docs"

[tool.poetry.scripts]
test = "pytest test"

[tool.poetry.dependencies]
python = "^3.10"
numpy = { version = "^1.24", optional = true }
pyarrow = { version = "^11.0.0", optional = true }
pycapnp= { version = "^1.3.0", optional = true }
torch= {version = ">=2.0.0, !=2.0.1", optional = true }
pydantic = "^2.2.0"

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "pytest-env"]
numpy = ['pyarrow', 'numpy']
torch = ['pyarrow', 'numpy', 'torch']
capnp = ['pycapnp']

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-env = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
